--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary_color">
-
-    <androidx.camera.view.PreviewView
-        android:id="@+id/preview_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:ignore="MissingConstraints" />
-
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <androidx.camera.view.PreviewView
+            android:id="@+id/preview_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+        <ImageButton
+            android:id="@+id/btn_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon_rec_video"
+            android:background="?selectableItemBackgroundBorderless"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="left |top"
+        tools:ignore="RtlHardcoded">
         <TextView
             android:id="@+id/txt_duration"
             android:layout_width="wrap_content"
@@ -31,76 +42,5 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/white"
             tools:text="00:01:25" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/btn_rotate"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
-        android:animateLayoutChanges="true"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
-        app:layout_constraintEnd_toStartOf="@+id/btn_back"
-        app:layout_constraintTop_toTopOf="@+id/btn_back">
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-          />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/btn_back"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:animateLayoutChanges="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_gravity="center" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/btn_record"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/icon_rec_video"
-        app:layout_constraintBottom_toTopOf="@+id/btn_mute"
-        app:layout_constraintEnd_toEndOf="@+id/btn_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_back">
-
-        <View
-            android:id="@+id/view_record_pause"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/btn_mute"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:animateLayoutChanges="true"
-        android:background="@drawable/baseline_volume_off_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <View
-            android:id="@+id/view_mute"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center" />
-    </FrameLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</RelativeLayout>
