--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -184,6 +184,39 @@
                     android:background="#4D979899"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/ll_setting_background"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true">
+                <TextView
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Background"
+                    android:textSize="18sp"
+                    android:textColor="@color/white"/>
+                <TextView
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/txt_setting_background"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Base"
+                    android:textSize="15sp"
+                    android:textColor="#E7E8E9"
+                    android:layout_marginBottom="10dp"/>
+                <View
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#4D979899"/>
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/ll_setting_pro_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
