--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,13 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_color">
+    android:background="@color/primary_color"
+    android:fitsSystemWindows="true">
+    <ImageView
+        android:id="@+id/img_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,6 +40,7 @@
         android:orientation="vertical"
         android:gravity="center">
         <TextView
+            android:visibility="gone"
             android:id="@+id/txt_conversation_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -47,6 +54,12 @@
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:gravity="center |right">
+        <ImageButton
+            android:id="@+id/imgbtn_gift"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:src="@drawable/baseline_card_giftcard_24"/>
         <ImageButton
             android:id="@+id/imgbtn_setting_bottom_dialog"
             android:layout_width="40dp"
