--- a/app/src/main/res/layout/activity_app_background_picker.xml
+++ b/app/src/main/res/layout/activity_app_background_picker.xml
@@ -9,24 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:gravity="center |right">
-        <ImageButton
-            android:id="@+id/imgbtn_multip_select"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="?selectableItemBackgroundBorderless"
-            android:src="@drawable/baseline_select_all_24"/>
-        <ImageButton
-            android:id="@+id/imgbtn_delete"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="?selectableItemBackgroundBorderless"
-            android:src="@drawable/baseline_delete_24"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:orientation="vertical"
         android:gravity="center |left">
         <ImageButton
@@ -43,11 +25,10 @@
         android:orientation="vertical"
         android:gravity="center">
         <TextView
-            android:id="@+id/txt_conversation_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="17sp"
-            android:text="Video Manager"
+            android:text="App Background Picker"
             android:gravity="center"
             android:textColor="@color/white"/>
     </LinearLayout>
@@ -57,7 +38,7 @@
         android:orientation="vertical"
         android:gravity="center">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcv_view_video_manager"
+            android:id="@+id/rcv_view_app_background_picker"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="50dp"
@@ -75,16 +56,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        android:clickable="true"
-        android:focusable="true"
         android:background="#4D000000" >
         <TextView
             android:id="@+id/txt_delete_process"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Loading ..."
-            android:textColor="@color/secondary_color"
+            android:text="No video"
+            android:textColor="@color/white"
             android:textSize="20sp"
             />
     </LinearLayout>
