--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
     <color name="primary_color">#2b323c</color>
     <color name="light_red">#FA6262</color>
     <color name="secondary_color">#3aaf78</color>
+    <color name="colorPositive">#0396fd</color>
+    <color name="colorNegative">#ffb509</color>
+    <color name="colorTitle">#ffffff</color>
+    <color name="colorSubTitle">#ededed</color>
+    <color name="colorDialogBackground">@color/white</color>
 </resources>
